package donnees

trait FeuilleWithDependance extends FeuilleCalque {
	//trouver rapidement dependance de 1 case
	def getDependance(c:Case):List[Case]
}